tests/cases/fail/list_char_literal_mixed.p4
def main() -> None:
    xs: list[char] = ['a', 1]
